<resources>
    <string name="app_name">MiniCalculator</string>
    <string name="c">C</string>
    <string name="_7">7</string>
    <string name="x">X</string>
    <string name="div">/</string>
    <string name="perc">%</string>
    <string name="clear">C</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="sub">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="add">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Equal">=</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="_00">_00</string>
    <string name="enter_data">enter data</string>
    <string name="result">result</string>
</resources>
